@@ -6,21 +6,33 @@ plt.subplots_adjust(hspace=0.4)
 t = np.arange(0.01, 20.0, 0.01)
 
 # log y axis
-plt.subplot(311)
+plt.subplot(221)
 plt.semilogy(t, np.exp(-t/5.0))
-plt.ylabel('semilogy')
+plt.title('semilogy')
 plt.grid(True)
 
 # log x axis
-plt.subplot(312)
+plt.subplot(222)
 plt.semilogx(t, np.sin(2*np.pi*t))
-plt.ylabel('semilogx')
+plt.title('semilogx')
 plt.grid(True)
 
 # log x and y axis
-plt.subplot(313)
+plt.subplot(223)
 plt.loglog(t, 20*np.exp(-t/10.0), basex=4)
 plt.grid(True)
-plt.ylabel('loglog base 4 on x')
+plt.title('loglog base 4 on x')
+
+# with errorbars: clip non-positive values
+ax = plt.subplot(224)
+ax.set_xscale("log", nonposx='clip')
+ax.set_yscale("log", nonposy='clip')
+
+x = 10.0**np.linspace(0.0, 2.0, 20)
+y = x**2.0
+plt.errorbar(x, y, xerr=0.1*x, yerr=5.0+0.75*y)
+ax.set_ylim(ymin=0.1)
+ax.set_title('Errorbars go negative')
+
 
 plt.show()
