@@ -1,3 +1,6 @@
+2009-04-04 Allow log axis scale to clip non-positive values to
+           small positive value; this is useful for errorbars. - EF
+
 2009-03-28 Make images handle nan in their array argument.
            A helper, cbook.safe_masked_invalid() was added. - EF
 
